fix: prevent responsive overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -250,3 +250,72 @@ h1 {
 	color: #4a5568;
 	text-align: center;
 }
+
+/* responsive style */
+@media (max-width: 600px) {
+	.container {
+		margin: 20px;
+		padding: 20px;
+		border-radius: 10px;
+		overflow: hidden;
+	}
+
+	h1 {
+		font-size: 2rem;
+	}
+
+	#todo-form {
+		flex-direction: column;
+	}
+
+	#task-input {
+		margin-bottom: 10px;
+		margin-right: 0;
+	}
+	.task-content {
+		width: 10px;
+		margin-right: 0;
+		overflow: hidden;
+	}
+
+	.task-actions {
+		flex-wrap: nowrap;
+		overflow: hidden;
+	}
+
+	.edit-btn,
+	.delete-btn {
+		width: 32px;
+		height: 32px;
+		padding: 0;
+	}
+	.message {
+		transform: translateX(0) translateY(-100px);
+		width: auto;
+		text-align: center;
+	}
+
+	.task-checkbox {
+		width: 15px;
+		height: 15px;
+	}
+}
+
+@media (max-width: 400px) {
+	.container {
+		margin: 10px;
+		padding: 10px;
+	}
+
+	h1 {
+		font-size: 1.8rem;
+	}
+	#task-input,
+	#todo-form button {
+		padding: 12px 15px;
+	}
+
+	.task-actions {
+		flex-wrap: wrap;
+	}
+}
